# chronoflow-v0

./: .bazelignore  .dockerignore  .gitignore  BUILD.bazel  Dockerfile.dev  MODULE.bazel  README.md  bootstrap.sh  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-pages.yml
scripts/: bootstrap.sh  build_dist.sh  container_dev_entrypoint.sh  docker_dev_down.sh  docker_dev_logs.sh  docker_dev_up.sh  hash_inputs.sh  run_dev.sh  setup.sh
src/: App.tsx  styles.css  types.ts
src/data/: sampleData.ts
src/lib/: engine.ts  graph.ts  semanticsDsl.ts
